[feat] update services and about sections with improved content and components

--- a/src/components/home/AboutBio.astro
+++ b/src/components/home/AboutBio.astro
@@ -4,9 +4,9 @@ import Markdoc from "@markdoc/markdoc";
 interface Props {
   bio: {
     heading: string;
-    col1: string; // Inline Markdoc string
-    col2: string; // Inline Markdoc string
-    image: any; // Astro image object
+    col1: string;
+    col2: string;
+    image?: any;
   };
 }
 
