--- a/src/components/home/ServicesSection.astro
+++ b/src/components/home/ServicesSection.astro
@@ -30,7 +30,7 @@ const introHtml = Markdoc.renderers.html(
 
     <!-- 4-Column Grid -->
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5">
-      {items.map((item: any) => <ServiceCard item={item} />)}
+      {items?.map((item: any) => <ServiceCard item={item} />)}  
     </div>
   </div>
 
