[feat] add contacts section with team members

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 import AboutUs from "../components/home/AboutUs.astro";
 import ServicesSection from "../components/home/ServicesSection.astro";
+import ContactsSection from "../components/home/ContactsSection.astro";
 ---
 
 <Layout title="Sítovka.net | Marketingová Agentura">
@@ -11,5 +12,6 @@ import ServicesSection from "../components/home/ServicesSection.astro";
   <!-- Services Section (Co umíme) -->
   <ServicesSection />
 
-  <!-- Other sections will follow -->
+  <!-- Contacts Section (5. Kontakty) -->
+  <ContactsSection />
 </Layout>
