[feat] add prefooter section with CTA headline

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import AboutUs from "../components/home/AboutUs.astro";
 import ServicesSection from "../components/home/ServicesSection.astro";
 import ContactsSection from "../components/home/ContactsSection.astro";
+import Prefooter from "../components/home/Prefooter.astro";
 ---
 
 <Layout title="Sítovka.net | Marketingová Agentura">
@@ -14,4 +15,7 @@ import ContactsSection from "../components/home/ContactsSection.astro";
 
   <!-- Contacts Section (5. Kontakty) -->
   <ContactsSection />
+
+  <!-- Prefooter Section -->
+  <Prefooter />
 </Layout>
