--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -83,7 +83,9 @@ const footerLinks = [
   <div
     class="hidden md:block absolute left-1/2 -translate-x-1/2 -translate-y-1/2"
   >
-    <Button href="#poptavka" variant="primary"> Poptávka </Button>
+    <Button href="#poptavka" variant="primary" className="py-5">
+      Poptávka
+    </Button>
   </div>
   <div class="container mx-auto px-10 pt-22.5">
     <!-- ROW 1: Logo on the left -->
@@ -92,7 +94,6 @@ const footerLinks = [
         <LogoWhite className="h-10 w-auto" aria-hidden="true" />
       </a>
     </div>
-    +
     <!-- GAP: 28px -->
     <div class="h-7"></div>
 
