[feat] add case studies section with tabs and testimonials

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 import AboutUs from "../components/home/AboutUs.astro";
 import ServicesSection from "../components/home/ServicesSection.astro";
+import CaseStudiesSection from "../components/home/CaseStudiesSection.astro";
 import ContactsSection from "../components/home/ContactsSection.astro";
 import Prefooter from "../components/home/Prefooter.astro";
 ---
@@ -12,6 +13,9 @@ import Prefooter from "../components/home/Prefooter.astro";
 
   <!-- Services Section (Co umíme) -->
   <ServicesSection />
+
+  <!-- Case Studies Section (4. Případové studie) -->
+  <CaseStudiesSection />
 
   <!-- Contacts Section (5. Kontakty) -->
   <ContactsSection />
