--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import HeroSection from "../components/home/HeroSection.astro";
 import AboutUs from "../components/home/AboutUs.astro";
 import ServicesSection from "../components/home/ServicesSection.astro";
 import CaseStudiesSection from "../components/home/CaseStudiesSection.astro";
@@ -8,6 +9,9 @@ import Prefooter from "../components/home/Prefooter.astro";
 ---
 
 <Layout title="Sítovka.net | Marketingová Agentura">
+  <!-- Hero Section (Top) -->
+  <HeroSection />
+
   <!-- About Us Section (Benefits + Bio) -->
   <AboutUs />
 
