--- a/src/components/home/HeroSection.astro
+++ b/src/components/home/HeroSection.astro
@@ -20,7 +20,7 @@ const { cards = [] } = entry.data;
 ---
 
 <section class="w-full bg-white relative pb-12 overflow-hidden z-30">
-  <div class="mx-auto px-6 h-full">
+  <div class="mx-autoh-full">
     <HeroAccordion client:load cards={cards} />
   </div>
 </section>
