--- a/src/components/home/BenefitsRow.astro
+++ b/src/components/home/BenefitsRow.astro
@@ -15,13 +15,15 @@ const { benefits } = Astro.props;
 
 <div class="grid grid-cols-1 md:grid-cols-3 gap-y-12 md:gap-x-22.5">
   {
-    benefits.map((benefit) => (
-      <BenefitCard
-        iconId={benefit.iconId}
-        hashtag={benefit.titleHashtag}
-        title={benefit.titleRemainder}
-        description={benefit.description}
-      />
+    benefits.map((benefit: any, index: number) => (
+      <div class="reveal-card" data-delay={`${index * 150}`}>
+        <BenefitCard
+          iconId={benefit.iconId}
+          hashtag={benefit.titleHashtag}
+          title={benefit.titleRemainder}
+          description={benefit.description}
+        />
+      </div>
     ))
   }
 </div>
