--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import HeroSection from "../components/home/HeroSection.astro";
+import LogoSlider from "../components/home/LogoSlider.astro";
 import AboutUs from "../components/home/AboutUs.astro";
 import ServicesSection from "../components/home/ServicesSection.astro";
 import CaseStudiesSection from "../components/home/CaseStudiesSection.astro";
@@ -11,6 +12,9 @@ import Prefooter from "../components/home/Prefooter.astro";
 <Layout title="Sítovka.net | Marketingová Agentura">
   <!-- Hero Section (Top) -->
   <HeroSection />
+
+  <!-- Clients Logo Carousel -->
+  <LogoSlider />
 
   <!-- About Us Section (Benefits + Bio) -->
   <AboutUs />
