--- a/src/components/home/LogoSlider.astro
+++ b/src/components/home/LogoSlider.astro
@@ -28,7 +28,10 @@ const reactLogos = logos.map((item: any) => ({
 }));
 ---
 
-<section class="bg-white rounded-[60px] relative overflow-visible">
+<section
+  class="bg-white rounded-[60px] relative overflow-visible reveal-card"
+  data-delay="250"
+>
   <div class="container mx-auto px-6 z-1 relative bg-white">
     <LogoCarousel client:visible logos={reactLogos} />
   </div>
