--- a/src/components/home/AboutUs.astro
+++ b/src/components/home/AboutUs.astro
@@ -17,7 +17,7 @@ const { benefits = [], bio } = entry.data;
 ---
 
 <section class="bg-white rounded-[60px] relative overflow-hidden">
-  <div class="container mx-auto px-6 py-24">
+  <div class="container mx-auto px-6 pb-24">
     <!-- Row 1: Benefits -->
     <BenefitsRow benefits={benefits} />
 
