image cut off fix

--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -29,7 +29,7 @@ const navItems: NavItem[] = [
       The 'text-brand-dark' class fills the SVG because your logo.svg likely uses fill attributes.
       We add 'group' to animate color on hover.
     -->
-    <a href="#" class="shrink-0 group" aria-label="Domů">
+    <a href="/#" class="shrink-0 group" aria-label="Domů">
       <Logo className="h-10 w-auto" aria-hidden="true" />
     </a>
 
