--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -90,7 +90,7 @@ const footerLinks = [
   <div class="container mx-auto px-10 pt-22.5">
     <!-- ROW 1: Logo on the left -->
     <div class="flex justify-start">
-      <a href="#" class="shrink-0 group" aria-label="Domů">
+      <a href="/#" class="shrink-0 group" aria-label="Domů">
         <LogoWhite className="h-10 w-auto" aria-hidden="true" />
       </a>
     </div>
