--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -67,7 +67,7 @@ const socialLinksData = [
 const footerLinks = [
   { name: "Úvod", href: "#" },
   { name: "Co umíme", href: "#co-umime" },
-  { name: "Reference", href: "#reference" },
+  { name: "Reference", href: "#pripadove-studie?tab=reference" },
 ];
 ---
 
