Fix image field format: change string to object with src property

--- a/src/components/home/AboutBio.astro
+++ b/src/components/home/AboutBio.astro
@@ -74,7 +74,7 @@ data-sb-field-path={`about.col${index + 1}`}
             class="text-sm font-book text-brand-dark leading-relaxed reveal-text" 
             data-delay={`${(index + 1) * 100}`} 
             set:html={item.html}
-            data-sb-field-path={`bio.col${index + 1}`}
+            data-sb-field-path={`about.col${index + 1}`}
           />
         ))}
       </div>
